designed home section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">World's best luxary Home</h4>
-                <p class="feature__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum culpa officiis delectus deleniti eos, nam, temporibus voluptatem enim accusantium magni mollitia vel voluptatibus nihil excepturi quibusdam. Ipsa consequuntur laudantium ipsam!</p>
+                <p class="feature__text">Lo ipsum dolor sit amet consectetur, adipisicing elit. Earum culpa officiis delectus deleniti eos, nam, temporibus voluptatem enim accusantium magni mollitia vel voluptatibus nihil excepturi quibusdam. Ipsa consequuntur laudantium ipsam!</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
@@ -67,13 +67,55 @@
             </div>
         </section>
         <div class="story__pictures">
-            pictures
+           <img src="img/story-1.jpeg" alt="" class="story__img--1">
+           <img src="img/story-2.jpeg" alt="" class="story__img--2">
         </div>
         <div class="story__content">
-            content
+            <h3 class="heading-3 mb-sm">Hello Customer</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best destination to live&ldquo;</h2>
+            <p class="story_text mb-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nostrum omnis dolore explicabo deleniti sint exercitationem similique earum cumque rem asperiores distinctio, sunt eum natus vel odio. Perferendis, hic. Dignissimos.
+            </p>
+            <button class="btn">Find your own home</button>
         </div>
         <section class="homes">
-            homes
+           <div class="home">
+             <img src="img/house-1.jpeg" alt="house 1" class="home__img">
+             <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__title">Beautiful Family House</h5>
+            <div class="home__location">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m <sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$131222</p>
+            </div>
+            <button class="btn home__retlor-btn">Contact Reltor</button>
+           </div>
+           <div class="home">Home Card 2</div>
+           <div class="home">Home Card 3</div>
+           <div class="home">Home Card 4</div>
+           <div class="home">Home Card 5</div>
+           <div class="home">Home Card 6</div>
         </section>
         <section class="gallery">
             gallery
